# libakrypt

./: .gitignore  CMakeLists.txt  Changelog.md  LICENSE  Readme.md  libakrypt-base.rc.in  libakrypt.conf  libakrypt.rc.in  libakrypt.test.sh
cmake/: DetectFlags.cmake  DetectHeaders.cmake  DetectIntrinsics.cmake  DetectLibraries.cmake  MakeDoc.cmake
doc/: Doxyfile.akrypt.in  Makefile.in  aead.rst  aktool.rst  annotation.rst  bibliography.rst  conf.py.in  encrypt.rst  faq.rst  index.rst  install-guide.rst  kdf.rst  libakrypt-base.rst  libakrypt-header.tex.in  random.rst  simpleprogs.rst  technical-reference.rst
examples/akbase/: example-file.c  example-ini-file.c  example-ini.c  example-mmap.c  example-realpath.c
examples/faq/: example-g01n01.c  example-g01n02.c  example-g01n03.c  example-g02n01.c  example-g02n02.c  example-g02n03.c  example-g02n04.c  example-g03n01.c  example-g03n02.c  example-g03n03.c  example-g03n04.c  example-g04n01.c  example-g04n02.c  example-g05n01.c  example-g05n02.c  example-g05n03.c
examples/scripts/: asymenc.sh  blom.sh  crtest.sh  icode.sh  vertest.sh
examples/tests/: test-aead.c  test-asn1-build.c  test-asn1-cert.c  test-asn1-keys.c  test-asn1-keys02.c  test-asn1-parse.c  test-blom-keys.c  test-cmac01.c  test-cmac02.c  test-gf2n.c  test-hmac.c  test-kdf-state.c  test-mgm01.c  test-mpzn-arithmetic.c  test-mpzn-convert.c  test-mpzn-montgomery.c  test-mpzn-password.c  test-mpzn-rem.c  test-random01.c  test-random02.c  test-sign01.c  test-xtsmac01.c
source/: ak_acpkm.c  ak_aead.c  ak_asn1.c  ak_asn1_cert.c  ak_asn1_keys.c  ak_base64.c  ak_bckey.c  ak_blom.c  ak_buffer.c  ak_cmac.c  ak_curves.c  ak_encrypt.c  ak_file.c  ak_gf2n.c  ak_hash.c  ak_hmac.c  ak_ini.c  ak_kdf.c  ak_kuznechik.c  ak_libakrypt.c  ak_list.c  ak_mac.c  ak_magma.c  ak_mgm.c  ak_mpzn.c  ak_oid.c  ak_options.c  ak_parameters.c  ak_random.c  ak_sign.c  ak_skey.c  ak_tools.c  ak_xts.c  ak_xtsmac.c  cf_operations.c  libakrypt-base.h.in  libakrypt-internal.h  libakrypt.h
